--- a/public/toy.html
+++ b/public/toy.html
@@ -13,7 +13,7 @@
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 	</head>
 	<body>
-	<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/222599/canvas.js></script>
+	<script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/222599/canvas.js"></script>
 	<script src="/public/js/toy.js"></script>
 	</body>
 </html>
