--- a/index.html
+++ b/index.html
@@ -302,6 +302,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                               <a href="http://180io.com/public/superbowl50.html" target="_blank">Day Ninety Nine - Superbowl 50<br></a>
                                                <a href="http://180io.com/public/rain.html" target="_blank">Day One Hundred - Rain<br></a>
                                                <a href="http://180io.com/public/ripple.html" target="_blank">Day One Hundred One - Ripple<br></a>
+                                               <a href="http://180io.com/public/toy.html" target="_blank">Day One Hundred Two - Toy<br></a>
+                                               <!--<a href="http://180io.com/public/oilpainting.html" target="_blank">Day One Hundred Three - Oil Painting<br></a>
+                                               <a href="http://180io.com/public/wordclock.html" target="_blank">Day One Hundred Four - Word Clock<br></a>-->
 								</div>
               </div>
             </div>
@@ -311,7 +314,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>101</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>102</em> are done</span></h1>
               </div>
             </div>
           </div>
