--- a/public/disco.html
+++ b/public/disco.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Disco</title>
+    		<link rel="stylesheet" type="text/css" href="/public/css/disco.scss" />
+  </head>
   <body>
     <div class="page">
       <button class="fun-btn">press for fun</button>
