--- a/public/disco.html
+++ b/public/disco.html
@@ -1,12 +1,22 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html>
-  <head>
-    <title>Disco</title>
-    		<link rel="stylesheet" type="text/css" href="/public/css/disco.scss" />
-  </head>
-  <body>
-    <div class="page">
+	<head>
+ <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Day One Hundred Five | Disco">
+    <meta name="author" content="Kabir Shah">
+
+		<title>Disco</title>
+		<link rel="stylesheet" type="text/css" href="/public/css/disco.css" />
+		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+<link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
+	</head>
+	<body>
+	      <div class="page">
       <button class="fun-btn">press for fun</button>
     </div>
-  </body>
+	<script src="/public/js/disco.js"></script>
+	</body>
 </html>
