--- a/public/disco.html
+++ b/public/disco.html
@@ -1,22 +1,26 @@
-
-<!doctype html>
+<!DOCTYPE html>
 <html>
-	<head>
- <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Day One Hundred Five | Disco">
-    <meta name="author" content="Kabir Shah">
-
-		<title>Disco</title>
-		<link rel="stylesheet" type="text/css" href="/public/css/disco.css" />
-		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
-<link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
-	</head>
-	<body>
-	      <div class="page">
-      <button class="fun-btn">press for fun</button>
+<head>
+    <meta charset="utf-8">
+    <meta content="IE=edge" http-equiv="X-UA-Compatible">
+    <meta content="width=device-width, initial-scale=1" name="viewport">
+    <meta content="Day One Hundred Five | Disco" name="description">
+    <meta content="Kabir Shah" name="author">
+    <title>Disco</title>
+    <link href="/public/css/disco.css" rel="stylesheet" type="text/css">
+    <link href="/favicon.png" rel="shortcut icon" type="image/png">
+    <link href="http://kingpixil.github.io/DayFiftyNine/favicon.png" rel=
+    "shortcut icon" type="image/png">
+    <script src="/public/js/analytics.js">
+    </script>
+</head>
+<body>
+    <div class="page">
+        <button class="fun-btn">press for fun</button>
     </div>
-	<script src="/public/js/disco.js"></script>
-	</body>
+    <script src="/public/js/lib/jquery.min.js">
+    </script> 
+    <script src="/public/js/disco.js">
+    </script>
+</body>
 </html>
