--- a/public/disco.html
+++ b/public/disco.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <div class="page">
-        <button class="fun-btn">press for fun</button>
+        <button class="fun-btn">start the disco</button>
     </div>
     <script src="/public/js/lib/jquery.min.js">
     </script> 
