--- a/public/switch.html
+++ b/public/switch.html
@@ -5,192 +5,27 @@
  <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Day One Hundred Six | Switch">
+    <meta name="description" content="Day One Hundred Six | Drop">
     <meta name="author" content="Kabir Shah">
 
 		<title>Switch</title>
-		<link rel="stylesheet" type="text/css" href="/public/css/switch.css" />
+		<link rel="stylesheet" type="text/css" href="/public/css/drop.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 	</head>
 	<body>
-		
-<div class="wrapper">
-  <div class="box">
-    <div class="cross r0 c0"></div>
-    <div class="cross r0 c1"></div>
-    <div class="cross r0 c2"></div>
-    <div class="cross r0 c3"></div>
-    <div class="cross r0 c4"></div>
-    <div class="cross r0 c5"></div>
-    <div class="cross r0 c6"></div>
-    <div class="cross r0 c7"></div>
-    <div class="cross r0 c8"></div>
-    <div class="cross r1 c0"></div>
-    <div class="cross r1 c1"></div>
-    <div class="cross r1 c2"></div>
-    <div class="cross r1 c3"></div>
-    <div class="cross r1 c4"></div>
-    <div class="cross r1 c5"></div>
-    <div class="cross r1 c6"></div>
-    <div class="cross r1 c7"></div>
-    <div class="cross r1 c8"></div>
-    <div class="cross r2 c0"></div>
-    <div class="cross r2 c1"></div>
-    <div class="cross r2 c2"></div>
-    <div class="cross r2 c3"></div>
-    <div class="cross r2 c4"></div>
-    <div class="cross r2 c5"></div>
-    <div class="cross r2 c6"></div>
-    <div class="cross r2 c7"></div>
-    <div class="cross r2 c8"></div>
-    <div class="cross r3 c0"></div>
-    <div class="cross r3 c1"></div>
-    <div class="cross r3 c2"></div>
-    <div class="cross r3 c3"></div>
-    <div class="cross r3 c4"></div>
-    <div class="cross r3 c5"></div>
-    <div class="cross r3 c6"></div>
-    <div class="cross r3 c7"></div>
-    <div class="cross r3 c8"></div>
-    <div class="cross r4 c0"></div>
-    <div class="cross r4 c1"></div>
-    <div class="cross r4 c2"></div>
-    <div class="cross r4 c3"></div>
-    <div class="cross r4 c4"></div>
-    <div class="cross r4 c5"></div>
-    <div class="cross r4 c6"></div>
-    <div class="cross r4 c7"></div>
-    <div class="cross r4 c8"></div>
-    <div class="cross r5 c0"></div>
-    <div class="cross r5 c1"></div>
-    <div class="cross r5 c2"></div>
-    <div class="cross r5 c3"></div>
-    <div class="cross r5 c4"></div>
-    <div class="cross r5 c5"></div>
-    <div class="cross r5 c6"></div>
-    <div class="cross r5 c7"></div>
-    <div class="cross r5 c8"></div>
-    <div class="cross r6 c0"></div>
-    <div class="cross r6 c1"></div>
-    <div class="cross r6 c2"></div>
-    <div class="cross r6 c3"></div>
-    <div class="cross r6 c4"></div>
-    <div class="cross r6 c5"></div>
-    <div class="cross r6 c6"></div>
-    <div class="cross r6 c7"></div>
-    <div class="cross r6 c8"></div>
-    <div class="cross r7 c0"></div>
-    <div class="cross r7 c1"></div>
-    <div class="cross r7 c2"></div>
-    <div class="cross r7 c3"></div>
-    <div class="cross r7 c4"></div>
-    <div class="cross r7 c5"></div>
-    <div class="cross r7 c6"></div>
-    <div class="cross r7 c7"></div>
-    <div class="cross r7 c8"></div>
-    <div class="cross r8 c0"></div>
-    <div class="cross r8 c1"></div>
-    <div class="cross r8 c2"></div>
-    <div class="cross r8 c3"></div>
-    <div class="cross r8 c4"></div>
-    <div class="cross r8 c5"></div>
-    <div class="cross r8 c6"></div>
-    <div class="cross r8 c7"></div>
-    <div class="cross r8 c8"></div>
-    <div class="cross r9 c0"></div>
-    <div class="cross r9 c1"></div>
-    <div class="cross r9 c2"></div>
-    <div class="cross r9 c3"></div>
-    <div class="cross r9 c4"></div>
-    <div class="cross r9 c5"></div>
-    <div class="cross r9 c6"></div>
-    <div class="cross r9 c7"></div>
-    <div class="cross r9 c8"></div>
-  </div>
-  <div class="box white">
-    <div class="cross r0 c0"></div>
-    <div class="cross r0 c1"></div>
-    <div class="cross r0 c2"></div>
-    <div class="cross r0 c3"></div>
-    <div class="cross r0 c4"></div>
-    <div class="cross r0 c5"></div>
-    <div class="cross r0 c6"></div>
-    <div class="cross r0 c7"></div>
-    <div class="cross r0 c8"></div>
-    <div class="cross r1 c0"></div>
-    <div class="cross r1 c1"></div>
-    <div class="cross r1 c2"></div>
-    <div class="cross r1 c3"></div>
-    <div class="cross r1 c4"></div>
-    <div class="cross r1 c5"></div>
-    <div class="cross r1 c6"></div>
-    <div class="cross r1 c7"></div>
-    <div class="cross r1 c8"></div>
-    <div class="cross r2 c0"></div>
-    <div class="cross r2 c1"></div>
-    <div class="cross r2 c2"></div>
-    <div class="cross r2 c3"></div>
-    <div class="cross r2 c4"></div>
-    <div class="cross r2 c5"></div>
-    <div class="cross r2 c6"></div>
-    <div class="cross r2 c7"></div>
-    <div class="cross r2 c8"></div>
-    <div class="cross r3 c0"></div>
-    <div class="cross r3 c1"></div>
-    <div class="cross r3 c2"></div>
-    <div class="cross r3 c3"></div>
-    <div class="cross r3 c4"></div>
-    <div class="cross r3 c5"></div>
-    <div class="cross r3 c6"></div>
-    <div class="cross r3 c7"></div>
-    <div class="cross r3 c8"></div>
-    <div class="cross r4 c0"></div>
-    <div class="cross r4 c1"></div>
-    <div class="cross r4 c2"></div>
-    <div class="cross r4 c3"></div>
-    <div class="cross r4 c4"></div>
-    <div class="cross r4 c5"></div>
-    <div class="cross r4 c6"></div>
-    <div class="cross r4 c7"></div>
-    <div class="cross r4 c8"></div>
-    <div class="cross r5 c0"></div>
-    <div class="cross r5 c1"></div>
-    <div class="cross r5 c2"></div>
-    <div class="cross r5 c3"></div>
-    <div class="cross r5 c4"></div>
-    <div class="cross r5 c5"></div>
-    <div class="cross r5 c6"></div>
-    <div class="cross r5 c7"></div>
-    <div class="cross r5 c8"></div>
-    <div class="cross r6 c0"></div>
-    <div class="cross r6 c1"></div>
-    <div class="cross r6 c2"></div>
-    <div class="cross r6 c3"></div>
-    <div class="cross r6 c4"></div>
-    <div class="cross r6 c5"></div>
-    <div class="cross r6 c6"></div>
-    <div class="cross r6 c7"></div>
-    <div class="cross r6 c8"></div>
-    <div class="cross r7 c0"></div>
-    <div class="cross r7 c1"></div>
-    <div class="cross r7 c2"></div>
-    <div class="cross r7 c3"></div>
-    <div class="cross r7 c4"></div>
-    <div class="cross r7 c5"></div>
-    <div class="cross r7 c6"></div>
-    <div class="cross r7 c7"></div>
-    <div class="cross r7 c8"></div>
-    <div class="cross r8 c0"></div>
-    <div class="cross r8 c1"></div>
-    <div class="cross r8 c2"></div>
-    <div class="cross r8 c3"></div>
-    <div class="cross r8 c4"></div>
-    <div class="cross r8 c5"></div>
-    <div class="cross r8 c6"></div>
-    <div class="cross r8 c7"></div>
-    <div class="cross r8 c8"></div>
-  </div>
-</div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+<div class="circle"></div>
+
+
 	</body>
 </html>
