--- a/public/drop.html
+++ b/public/drop.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Day One Hundred Six | Drop">
     <meta name="author" content="Kabir Shah">
 
-		<title>Switch</title>
+		<title>Drop</title>
 		<link rel="stylesheet" type="text/css" href="/public/css/drop.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
