--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/oilpainting.html">Latest Website</a>
+                      <a href="http://180io.com/public/wordrain.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -304,8 +304,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                <a href="http://180io.com/public/ripple.html" target="_blank">Day One Hundred One - Ripple<br></a>
                                                <a href="http://180io.com/public/toy.html" target="_blank">Day One Hundred Two - Toy<br></a>
                                                <a href="http://180io.com/public/oilpainting.html" target="_blank">Day One Hundred Three - Oil Painting<br></a>
-                                               <!--<a href="http://180io.com/public/wordrain.html" target="_blank">Day One Hundred Four - Word Rain<br></a>
-                                               <a href="http://180io.com/public/disco.html" target="_blank">Day One Hundred Five - Disco<br></a>-->
+                                               <a href="http://180io.com/public/wordrain.html" target="_blank">Day One Hundred Four - Word Rain<br></a>
+                                               <!--<a href="http://180io.com/public/disco.html" target="_blank">Day One Hundred Five - Disco<br></a>
+                                               <a href="http://180io.com/public/drop.html" target="_blank">Day One Hundred Five - Drop<br></a>-->
 								</div>
               </div>
             </div>
@@ -315,7 +316,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>103</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>104</em> are done</span></h1>
               </div>
             </div>
           </div>
