--- a/index.html
+++ b/index.html
@@ -305,8 +305,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                <a href="http://180io.com/public/toy.html" target="_blank">Day One Hundred Two - Toy<br></a>
                                                <a href="http://180io.com/public/oilpainting.html" target="_blank">Day One Hundred Three - Oil Painting<br></a>
                                                <a href="http://180io.com/public/wordrain.html" target="_blank">Day One Hundred Four - Word Rain<br></a>
-                                               <!--<a href="http://180io.com/public/disco.html" target="_blank">Day One Hundred Five - Disco<br></a>
-                                               <a href="http://180io.com/public/drop.html" target="_blank">Day One Hundred Five - Drop<br></a>-->
+                                               <a href="http://180io.com/public/disco.html" target="_blank">Day One Hundred Five - Disco<br></a>
+                                               <!--<a href="http://180io.com/public/drop.html" target="_blank">Day One Hundred Six - Drop<br></a>
+                                               <a href="http://180io.com/public/focus.html" target="_blank">Day One Hundred Seven - Focus<br></a>-->
 								</div>
               </div>
             </div>
