--- a/public/chaos.html
+++ b/public/chaos.html
@@ -18,6 +18,6 @@
 	<h1>Click</h1>
 
 <canvas id="c"></canvas>
-<script src="/public/js/chaos.js></script>
+<script src="/public/js/chaos.js"></script>
 	</body>
 </html>
