--- a/public/chaos.html
+++ b/public/chaos.html
@@ -15,9 +15,10 @@
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 	</head>
 	<body>
-	<h1>Click</h1>
+	<h1>Click Anywhere</h1>
 
 <canvas id="c"></canvas>
+<script src="/public/js/lib/feather.js"></script>
 <script src="/public/js/chaos.js"></script>
 	</body>
 </html>
