--- a/index.html
+++ b/index.html
@@ -156,6 +156,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
     <ul>
 	<li><a href="#intro" class="n-link">About</a></li>
 	<li><a href="#features" class="n-link">Sites</a></li>
+	<!--<li><a href="#experiments" class="n-link">Sites</a></li>-->
 	<li><a href="https://180projectblog.wordpress.com/" class="n-link">Blog</a></li>
     </ul>
   </nav>
@@ -315,6 +316,24 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
             </div>
           </div>
         </section>
+        <!--
+                <section class="experiments text-center section-padding" id="experiments">
+          <div class="container">
+            <div class="row">
+              <div class="col-md-8 col-md-offset-2 wp1">
+                <h1 class="arrow">Experiments</h1>
+                <p>
+                Here are some fun experiments that I have been working on, from bookmarks to harmless pranks!
+                  </p>
+                  <ul>
+                  	<li><a href="http://kingpixil.github.io/BOMB">DESTROY - Destroy any website</a></li>
+                  	<li><a href="http://kingpixil.github.io/crashsafari">CRASH - A  harmless prank to shut down and crash a computer</a></li>
+                  </ul>
+              </div>
+            </div>
+          </div>
+        </section>
+        -->
         <section class="swag text-center">
           <div class="container">
             <div class="row">
