--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/drop.html">Latest Website</a>
+                      <a href="http://180io.com/public/grow.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -308,8 +308,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                <a href="http://180io.com/public/wordrain.html" target="_blank">Day One Hundred Four - Word Rain<br></a>
                                                <a href="http://180io.com/public/disco.html" target="_blank">Day One Hundred Five - Disco<br></a>
                                                <a href="http://180io.com/public/drop.html" target="_blank">Day One Hundred Six - Drop<br></a>
-                                               <!--<a href="http://180io.com/public/focus.html" target="_blank">Day One Hundred Seven - Focus<br></a>
-                                               <a href="http://180io.com/public/grow.html" target="_blank">Day One Hundred Eight - Grow<br></a>
+                                               <a href="http://180io.com/public/focus.html" target="_blank">Day One Hundred Seven - Focus<br></a>
+                                               <!--<a href="http://180io.com/public/grow.html" target="_blank">Day One Hundred Eight - Grow<br></a>
                                                <a href="http://180io.com/public/chaos.html" target="_blank">Day One Hundred Nine - Chaos<br></a>-->
 								</div>
               </div>
@@ -338,7 +338,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>106</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>107</em> are done</span></h1>
               </div>
             </div>
           </div>
