--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
               <div class="col-md-4">
                 <div class="light-box box-hover">
                   <h2><i class="fa fa-paper-plane"></i><span>Email</span></h2>
-                  <p><a href="#">hey@halcyondays.com</a></p>
+                  <p><a href="#">email</a></p>
                 </div>
               </div>
             </div>
@@ -424,7 +424,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
         <script src="js/jquery.flexslider.js"></script>
         <script src="js/modernizr.js"></script>
 <script type="text/javascript" src="//s7.addthis.com/js/300/addthis_widget.js#pubid=ra-5519f028102b8231" async="async"></script>
-
+<!-- For the ads -->
+<script src="http://www.main180.tk/js/carbonadpack.js"></script>
            
         
       </body>
