--- a/index.html
+++ b/index.html
@@ -309,8 +309,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                <a href="http://180io.com/public/disco.html" target="_blank">Day One Hundred Five - Disco<br></a>
                                                <a href="http://180io.com/public/drop.html" target="_blank">Day One Hundred Six - Drop<br></a>
                                                <a href="http://180io.com/public/focus.html" target="_blank">Day One Hundred Seven - Focus<br></a>
-                                               <!--<a href="http://180io.com/public/grow.html" target="_blank">Day One Hundred Eight - Grow<br></a>
-                                               <a href="http://180io.com/public/chaos.html" target="_blank">Day One Hundred Nine - Chaos<br></a>-->
+                                               <a href="http://180io.com/public/grow.html" target="_blank">Day One Hundred Eight - Grow<br></a>
+                                               <!--<a href="http://180io.com/public/chaos.html" target="_blank">Day One Hundred Nine - Chaos<br></a>
+                                               <a href="http://180io.com/public/sparktree.html" target="_blank">Day One Hundred Ten - Spark Tree<br></a>-->
 								</div>
               </div>
             </div>
