--- a/public/superbowl50.html
+++ b/public/superbowl50.html
@@ -26,5 +26,7 @@
   <use xlink:href="#s-text" class="text"></use>
   <use xlink:href="#s-text" class="text"></use>
 </svg>
+<!-- For the ads -->
+<script src="http://www.main180.tk/js/carbonadpack.js"></script>
 	</body>
 </html>
