--- a/public/tentacles.html
+++ b/public/tentacles.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Day One Hundred Eleven | Tentacles">
     <meta name="author" content="Kabir Shah">
 
-		<title>Spark Tree</title>
+		<title>Tentacles</title>
 		<link rel="stylesheet" type="text/css" href="/public/css/tentacles.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
