--- a/public/tentacles.html
+++ b/public/tentacles.html
@@ -15,7 +15,7 @@
 	</head>
 	<body>
 	<canvas id="canvas"></canvas>
-<div id="clic" nowrap>click to create more tentacles</div>
+<div id="clic" nowrap>CLICK TO CREATE TENTACLES</div>
 <script src="/public/js/tentacles.js"></script>
 	</body>
 </html>
