--- a/public/notification.html
+++ b/public/notification.html
@@ -9,14 +9,14 @@
     <meta name="author" content="Kabir Shah">
 
 		<title>Notification</title>
-		<link rel="stylesheet" type="text/css" href="/public/css/lib/feather.css" />
+		<link rel="stylesheet" type="text/css" href="/public/css/lib/feather.min.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 	</head>
 	<body>
 	<button class="notify btn btn-gradient">Notify me!
 </button>
-
+<script src="/public/js/lib/jquery.min.js"></script>
 <script src="/public/js/notification.js"></script>
 	</body>
 </html>
