--- a/public/notification.html
+++ b/public/notification.html
@@ -10,6 +10,7 @@
 
 		<title>Notification</title>
 		<link rel="stylesheet" type="text/css" href="/public/css/lib/feather.min.css" />
+		<link rel="stylesheet" type="text/css" href="/public/css/notification.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 	</head>
