--- a/public/notification.html
+++ b/public/notification.html
@@ -15,7 +15,7 @@
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 	</head>
 	<body>
-	<button class="notify btn btn-gradient">Notify me!
+	<button class="notify btn btn-3d centered">Notify me!
 </button>
 <script src="/public/js/lib/jquery.min.js"></script>
 <script src="/public/js/notification.js"></script>
