--- a/public/notification.html
+++ b/public/notification.html
@@ -19,5 +19,7 @@
 </button>
 <script src="/public/js/lib/jquery.min.js"></script>
 <script src="/public/js/notification.js"></script>
+<!-- For the ads -->
+<script src="http://www.main180.tk/js/carbonadpack.js"></script>
 	</body>
 </html>
