--- a/public/unclickable.html
+++ b/public/unclickable.html
@@ -9,13 +9,13 @@
     <meta name="description" content="Day One Hundred Thirteen | Unclickable">
     <meta name="author" content="Kabir Shah">
 
-		<title>Notification</title>
+		<title>Unclickable</title>
 		<link rel="stylesheet" type="text/css" href="/public/css/unclickable.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 	</head>
 	<body>
-	<button id="lol" tabindex="-1" class="btn btn-2">Not Really</button>
+	<button id="lol" tabindex="-1" class="btn btn-2">TRY AND CLICK ME</button>
 <script src="/public/js/lib/jquery.min.js"></script>
 <script src="/public/js/unclickable.js"></script>
 	</body>
