--- a/index.html
+++ b/index.html
@@ -312,8 +312,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                <a href="http://180io.com/public/grow.html" target="_blank">Day One Hundred Eight - Grow<br></a>
                                                <a href="http://180io.com/public/chaos.html" target="_blank">Day One Hundred Nine - Chaos<br></a>
                                                <a href="http://180io.com/public/sparktree.html" target="_blank">Day One Hundred Ten - Spark Tree<br></a>
-                                               <!--<a href="http://180io.com/public/tentacles.html" target="_blank">Day One Hundred Eleven - Tentacles<br></a>
-                                                <a href="http://180io.com/public/notification.html" target="_blank">Day One Hundred Twelve - Notification<br></a>-->
+                                               <a href="http://180io.com/public/tentacles.html" target="_blank">Day One Hundred Eleven - Tentacles<br></a>
+                                                <!--<a href="http://180io.com/public/notification.html" target="_blank">Day One Hundred Twelve - Notification<br></a>
+                                                <a href="http://180io.com/public/unclickable.html" target="_blank">Day One Hundred Thirteen - Unclickable<br></a>-->
 								</div>
               </div>
             </div>
