--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/notification.html">Latest Website</a>
+                      <a href="http://180io.com/public/unclickable.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -314,7 +314,8 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                <a href="http://180io.com/public/sparktree.html" target="_blank">Day One Hundred Ten - Spark Tree<br></a>
                                                <a href="http://180io.com/public/tentacles.html" target="_blank">Day One Hundred Eleven - Tentacles<br></a>
                                                 <a href="http://180io.com/public/notification.html" target="_blank">Day One Hundred Twelve - Notification<br></a>
-                                                <!--<a href="http://180io.com/public/unclickable.html" target="_blank">Day One Hundred Thirteen - Unclickable<br></a>
+                                                <a href="http://180io.com/public/unclickable.html" target="_blank">Day One Hundred Thirteen - Unclickable<br></a>
+                                                <!--<a href="http://180io.com/public/encrypt.html" target="_blank">Day One Hundred Fourteen - Encrypt<br></a>
                                                 <a href="http://180io.com/public/encrypt.html" target="_blank">Day One Hundred Fourteen - Encrypt<br></a>-->
 								</div>
               </div>
@@ -343,7 +344,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>112</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>113</em> are done</span></h1>
               </div>
             </div>
           </div>
