--- a/public/prediction.html
+++ b/public/prediction.html
@@ -17,6 +17,8 @@
 	<body>
 	<button class="btn btn-gradient centered">Tell me!</button>
 <div class="text text-center centered"></div>
+<script src="/public/js/lib/jquery.min.js"></script>
+<script src="/public/js/lib/jquerybrowsermobile.js"></script>
 <script src="/public/js/prediction.js"></script>
 	</body>
 </html>
