--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/encrypt.html">Latest Website</a>
+                      <a href="http://180io.com/public/3dparticles.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -316,8 +316,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                 <a href="http://180io.com/public/notification.html" target="_blank">Day One Hundred Twelve - Notification<br></a>
                                                 <a href="http://180io.com/public/unclickable.html" target="_blank">Day One Hundred Thirteen - Unclickable<br></a>
                                                 <a href="http://180io.com/public/encrypt.html" target="_blank">Day One Hundred Fourteen - Encrypt<br></a>
-                                                <!--<a href="http://180io.com/public/3dparticles.html" target="_blank">Day One Hundred Fifteen - 3D Particles<br></a>
-                                                <a href="http://180io.com/public/whitespace.html" target="_blank">Day One Hundred Sixteen - Whitespace<br></a>-->
+                                                <a href="http://180io.com/public/3dparticles.html" target="_blank">Day One Hundred Fifteen - 3D Particles<br></a>
+                                                <!--<a href="http://180io.com/public/whitespace.html" target="_blank">Day One Hundred Sixteen - Whitespace<br></a>
+                                                <a href="http://180io.com/public/prediction.html" target="_blank">Day One Hundred Seventeen - Prediction<br></a>-->
 								</div>
               </div>
             </div>
@@ -345,7 +346,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>114</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>115</em> are done</span></h1>
               </div>
             </div>
           </div>
