--- a/public/solarsystem.html
+++ b/public/solarsystem.html
@@ -11,7 +11,7 @@
 		<title>Solar System!</title>
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="https://sbmbwcxo.apps.lair.io/favicon.png"/>
-		<link rel="stylesheet" type="text/css" href="main.css" />
+		<link rel="stylesheet" type="text/css" href="/public/css/solarsystem.css" />
 	</head>
 	<body>
 	<section class="clearfix">
