--- a/index.html
+++ b/index.html
@@ -317,8 +317,9 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                 <a href="http://180io.com/public/unclickable.html" target="_blank">Day One Hundred Thirteen - Unclickable<br></a>
                                                 <a href="http://180io.com/public/encrypt.html" target="_blank">Day One Hundred Fourteen - Encrypt<br></a>
                                                 <a href="http://180io.com/public/3dparticles.html" target="_blank">Day One Hundred Fifteen - 3D Particles<br></a>
-                                                <!--<a href="http://180io.com/public/whitespace.html" target="_blank">Day One Hundred Sixteen - Whitespace<br></a>
-                                                <a href="http://180io.com/public/prediction.html" target="_blank">Day One Hundred Seventeen - Prediction<br></a>-->
+                                                <a href="http://180io.com/public/whitespace.html" target="_blank">Day One Hundred Sixteen - Whitespace<br></a>
+                                                <!--<a href="http://180io.com/public/prediction.html" target="_blank">Day One Hundred Seventeen - Prediction<br></a>
+                                                <a href="http://180io.com/public/backgroundchange.html" target="_blank">Day One Hundred Eighteen - Background Change<br></a>-->
 								</div>
               </div>
             </div>
