--- a/public/spacelines.html
+++ b/public/spacelines.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Day One Hundred Twenty | Space Lines">
     <meta name="author" content="Kabir Shah">
 
-		<title>Silly Cursor</title>
+		<title>Space Lines</title>
 		<link rel="stylesheet" type="text/css" href="/public/css/spacelines.css" />
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
