--- a/public/worm.html
+++ b/public/worm.html
@@ -16,7 +16,7 @@
 	</head>
 	<body>
 	<div class="canvas">
-<canvas id="canvas"></canvas>
+<canvas id="canvas-1"></canvas>
 </div>
 	</body>
 </html>
