--- a/public/worm.html
+++ b/public/worm.html
@@ -12,7 +12,7 @@
 		<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
 <link rel="shortcut icon" type="image/png" href="http://kingpixil.github.io/DayFiftyNine/favicon.png"/>
 	<script src="/public/js/lib/paper.min.js"></script>
-<script src="/public/js/worm.js"></script>
+<script canvas="canvas-1" src="/public/js/worm.js"></script>
 	</head>
 	<body>
 	<div class="canvas">
