--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                 <p>Hi! I am Kabir and I am learning to code by building 180 websites in 180 days! You can follow the project here, and for every website, there will be a <a href="https://180projectblog.wordpress.com/">blog post.</a>
                   </p>
                   <h1>
-                      <a href="http://180io.com/public/sillycursor.html">Latest Website</a>
+                      <a href="http://180io.com/public/spacelines.html">Latest Website</a>
                   </h1>
               </div>
             </div>
@@ -321,8 +321,10 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
                                                 <a href="http://180io.com/public/prediction.html" target="_blank">Day One Hundred Seventeen - Prediction<br></a>
                                                <a href="http://180io.com/public/backgroundchange.html" target="_blank">Day One Hundred Eighteen - Background Change<br></a>
                                                 <a href="http://180io.com/public/sillycursor.html" target="_blank">Day One Hundred Nineteen - Silly Cursor<br></a>
-                                                 <!--<a href="http://180io.com/public/spacelines.html" target="_blank">Day One Hundred Twenty - Space Lines<br></a>
-                                                <a href="http://180io.com/public/worm.html" target="_blank">Day One Hundred Twenty One - Worm<br></a>-->
+                                                 <a href="http://180io.com/public/spacelines.html" target="_blank">Day One Hundred Twenty - Space Lines<br></a>
+                                                <!--<a href="http://180io.com/public/worm.html" target="_blank">Day One Hundred Twenty One - Worm<br></a>
+                                                <a href="http://180io.com/public/mouseshrink.html" target="_blank">Day One Hundred Twenty Two - Mouse Shrink<br></a>
+                                                <a href="http://180io.com/public/lightning.html" target="_blank">Day One Hundred Twenty Three - Lightning<br></a>-->
 								</div>
               </div>
             </div>
@@ -350,7 +352,7 @@ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLI
           <div class="container">
             <div class="row">
               <div class="col-md-8 col-md-offset-2">
-                <h1>I got 180 problems<span>but <em>119</em> are done</span></h1>
+                <h1>I got 180 problems<span>but <em>120</em> are done</span></h1>
               </div>
             </div>
           </div>
