--- a/public/explore.html
+++ b/public/explore.html
@@ -16,6 +16,6 @@
 
 	<script src="/public/js/lib/threejs/three.min.js"></script>
 	<script src="/public/js/lib/threejs/flycontrols.js"></script>
-<script src="/public/js/explor.js"></script>
+<script src="/public/js/explore.js"></script>
 	</body>
 </html>
